# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-07-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add get_pids function to the internal service CloudI API
      (the cloudi_service module)
    * Add internal service module reload functionality with the
      "reload" to the service configuration options
    * Add the possibility of changing the service scope to alter what
      cpg scope is used for service name lookup operations, with the
      "scope" option in the service configuration options
    * Provide a more descriptive error for an erroneous unsubscribe
      CloudI API call in an external service
    * Update cpg
    * Add internal service module "hibernate" option to the
      service configuration options

2013-07-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Substitute Erlang VM shell environmental variables in
      ExecutableFilePath, ExecutableCommandLineArguments, and
      ExecutableEnvironmentalVariables parameters for external services
    * Update cpg and reltool_util
    * Add listen parameter to cloudi_service_db_pgsql

2013-07-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi module retry of service requests and context checking
    * Add cloudi_logger.hrl FUNCTION macro
    * Add service state parameter for cloudi_service_init/3 stop return value
      (optional for usage in cloudi_service_terminate/2, otherwise undefined)
    * Fix cloudi_service_db_pgsql list results
    * Add cloudi_service_db_pgsql_SUITE ct test module
    * Update cpg and reltool_util
    * Fix duo_mode internal service terminate after init returns stop
    * Fix timeout usage within cloudi module to imitate the cloudi_service
      module usage of TIMEOUT_DELTA for service name lookups
    * Make cloudi_service_db_pgsql_SUITE execution conditional so that
      postgres configuration isn't required

2013-07-17 Michael Truog   <mjtruog [at] gmail (dot) com>
