@@ -5,7 +5,6 @@
     "/usr/local/lib/cloudi-1.2.4/lib"
    ]},
   {erts, [{mod_cond, all}, {app_file, keep}]},
-  {app_file, keep},
   {rel, "cloudi_hello_world2", "1",
    [
     hello_world2
@@ -19,12 +18,21 @@
   {profile, embedded},
   {incl_cond, derived},
   {mod_cond, all},
+  {app_file, keep},
   {excl_archive_filters, [".*"]},
   {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                       "^erts.*/(doc|info|include|lib|man|src)"]},
   {app, hipe, [{incl_cond, exclude}]},
+  {app, cloudi_core,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_services_internal,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_services_databases,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_services_messaging,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
   {app, hello_world2,
-   [{mod_cond, app}, {incl_cond, include}, {lib_dir, "."}]}
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}, {lib_dir, "."}]}
 ]}.
 
 {target_dir, "release"}.
