@@ -34,59 +34,6 @@
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
   {app, cloudi_services_messaging,
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_pqueue,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_quickrand,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_cpg,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_uuid,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_trie,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_reltool_util,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_key2value,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-
-  % cloudi_core dependencies
-  {app, cloudi_x_combonodefinder,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_dynamic_compile,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_ec2nodefinder,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_nodefinder,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-
-  % cloudi_services_internal dependencies
-  {app, cloudi_x_cowboy,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_elli,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_jsx,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-
-  % cloudi_services_databases dependencies
-  {app, cloudi_x_ecouchdb,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_ememcached,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_emysql,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_epgsql,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_erlasticsearch,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_etokyotyrant,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_poolboy,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_x_thrift,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-
-  % cloudi_services_messaging dependencies
-  @ZEROMQ_ERLZMQ_RELTOOL@
 
   % application directories
   {lib_dirs,
@@ -99,35 +46,11 @@
   % application startup for release generation
   {rel, "cloudi", "1",
    [
-    % external dependencies
-    cloudi_x_cowboy,
-    % combonodefinder not started automatically
-    cloudi_x_dynamic_compile,
-    cloudi_x_elli,
-    % ec2nodefinder not started automatically
-    cloudi_x_ecouchdb,
-    cloudi_x_ememcached,
-    cloudi_x_emysql,
-    cloudi_x_epgsql,
-    cloudi_x_erlasticsearch, 
-    cloudi_x_etokyotyrant,
-    cloudi_x_jsx,
-    % nodefinder not started automatically
-    cloudi_x_poolboy,    % required for erlasticsearch
-    cloudi_x_ranch,      % required for cowboy
-    cloudi_x_thrift,     % required for erlasticsearch
     % CloudI
     cloudi_core,
     cloudi_services_internal,
     cloudi_services_databases,
     cloudi_services_messaging,
-    cloudi_x_pqueue,
-    cloudi_x_quickrand,
-    cloudi_x_cpg,
-    cloudi_x_uuid,
-    cloudi_x_trie,
-    cloudi_x_reltool_util,
-    cloudi_x_key2value,
     % Erlang
     sasl,
     stdlib,
